email fix hopegully

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ footer{padding:28px 0;border-top:1px solid color-mix(in oklab,var(--ink-500) 20%
     <div class="card reveal">
       <h2>Get in Touch</h2>
       <p>Questions or ready to jump in? Email the execs directly and we’ll get you set up for the next build session.</p>
-      <p><a class="btn primary" href="mailto:lunoi@utschools.ca,llma@utschools.ca,zhajoh@utschools.ca?subject=Join%20UTS%20Rocketry&body=Hi%20team%2C%20I%27d%20like%20to%20join%20UTS%20Rocketry.">Email the Execs</a></p>
-      <p><strong>Staff Supervisor:</strong> Mr. Nachshen</p>
+  <p><a class="btn primary" href="mailto:lunoi@utschools.ca,llma@utschools.ca,zhajoh@utschools.ca?subject=Join%20UTS%20Rocketry&body=Hi%20team%2C%20I%27d%20like%20to%20join%20UTS%20Rocketry.">Email the Execs</a></p>
+  <p><strong>Staff Supervisor:</strong> <a href="mailto:thomas.nachshen@utschools.ca">Mr. Nachshen</a></p>
       <p><strong>Contacts:</strong> <a href="mailto:lunoi@utschools.ca">Oisín Lundon</a> · <a href="mailto:llma@utschools.ca">Mattias Libesman‑Lee</a> · <a href="mailto:zhajoh@utschools.ca">Johnathan Zhang</a></p>
     </div>
     <div class="card reveal">
