--- a/members.html
+++ b/members.html
@@ -36,14 +36,14 @@ ul.clean li:before{content:"✦";position:absolute;left:0;top:0;color:var(--blue
   <div class="container hero-wrap">
     <div>
       <div class="brand">
-        <img src="assets/logo.png" alt="UTS Rocketry Logo" style="height:58px;vertical-align:middle;">
+        <img src="assets/RocketryLogoLight.png" alt="UTS Rocketry Logo" style="height:58px;vertical-align:middle;">
         <span style="font-size:2.1rem;font-weight:900;vertical-align:middle;">UTS Rocketry</span>
       </div>
       <h1 style="font-size:clamp(34px,5vw,56px);line-height:1.12;margin:0 0 12px;font-weight:900">Members Portal</h1>
       <p class="lead">Welcome to the UTS Rocketry members portal. Access exclusive announcements and resources for team members.</p>
     </div>
     <div class="card" role="img" aria-label="UTS Rocketry mark" style="background:transparent;box-shadow:none;border:none;">
-        <!-- Optionally add a logo or illustration here -->
+      <img src="assets/ExecsPhoto.jpeg" alt="UTS Rocketry Team Photo" class="team-photo">
     </div>
   </div>
 </section>
@@ -75,6 +75,7 @@ ul.clean li:before{content:"✦";position:absolute;left:0;top:0;color:var(--blue
     <div class="card reveal" style="grid-column: span 2;">
       <h2 style="text-align:center;">Meet the Team</h2>
       <div style="max-width:520px;width:100%;margin:auto;">
+  <img src="assets/ExecsPhoto.jpeg" alt="UTS Rocketry Team Photo" class="team-photo">
         <p><strong>Execs:</strong> <a href="mailto:zhajoh@utschools.ca">Johnathan Zhang</a> · <a href="mailto:lunoi@utschools.ca">Oisin Lundon</a> · <a href="mailto:llma@utschools.ca">Mattias Libesman‑Lee</a></p>
         <p><strong>Staff Supervisor:</strong> <a href="mailto:thomas.nachshen@utschools.ca">Mr. Nachshen</a></p>
       </div>
