--- a/members.html
+++ b/members.html
@@ -28,6 +28,17 @@ ul.clean li:before{content:"✦";position:absolute;left:0;top:0;color:var(--blue
 /* Floating action buttons */
 .fab{position:fixed;right:20px;bottom:20px;background:var(--blue-600);color:#fff;border:none;border-radius:999px;padding:14px 18px;font-weight:800;box-shadow:0 12px 28px -14px var(--blue-600);cursor:pointer;z-index:9999}
 .fab:hover{filter:brightness(1.05)}
+.team-photo {
+  width: 100%;
+  max-width: 520px;
+  border-radius: 18px;
+  box-shadow: 0 8px 32px -12px var(--blue-600);
+  margin-bottom: 22px;
+  object-fit: cover;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
 </head>
 
@@ -41,9 +52,9 @@ ul.clean li:before{content:"✦";position:absolute;left:0;top:0;color:var(--blue
       </div>
       <h1 style="font-size:clamp(34px,5vw,56px);line-height:1.12;margin:0 0 12px;font-weight:900">Members Portal</h1>
       <p class="lead">Welcome to the UTS Rocketry members portal. Access exclusive announcements and resources for team members.</p>
-    </div>
-    <div class="card" role="img" aria-label="UTS Rocketry mark" style="background:transparent;box-shadow:none;border:none;">
-      <img src="assets/ExecsPhoto.jpeg" alt="UTS Rocketry Team Photo" class="team-photo">
+      <div class="card" style="margin-top:18px;">
+  <img src="assets/RocketLaunching.png" alt="UTS Rocketry Rocket Photo" class="team-photo">
+      </div>
     </div>
   </div>
 </section>
